<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ry_head"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ly_m1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/yellow_gradient_5"
            android:gravity="center"
            android:text="@string/record_time"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tv_photos"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/blue_gradient_5"
            android:gravity="center"
            android:text="@string/photos"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_below="@id/ly_m1"

        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_memo"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/red_gradient_5"
            android:gravity="center"
            android:text="@string/memo"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/green_gradient_5"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>

</RelativeLayout>